# lightweight_logger

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp
include/: lightweight_logger.h
src/: lightweight_logger.cc  lightweight_logger.cpp
